<resources>
    <string name="app_name">Osata</string>

    <!-- Form Login -->
    <string name="different_login">Or</string>
    <string name="login_text">Login</string>
    <string name="register_text">Register</string>
    <string name="pass_forgot">Lupa Password?</string>
    <string name="pass_text">Password</string>
    <string name="email_text">E-Mail</string>


    <!-- Form Register -->
    <string name="nama_text">Nama</string>
    <string name="phone">Nomor Telepon</string>
    <string name="city">Kota Asal</string>
    <string name="dob">Tanggal Lahir</string>
    <string name="gender">Jenis Kelamin</string>
    <string name="already_registered">Already have an account? Sign in</string>

    <!-- Warning Error -->
    <string name="error_invalid_email">Invalid Email</string>
    <string name="error_invalid_password">The password is too short</string>
    <string name="error_incorrect_password">Email or password incorrect</string>
    <string name="error_field_required">Required</string>

    <!-- Item Navigation Drawer -->
    <string name="beranda">Beranda</string>
    <string name="peta">Peta</string>
    <string name="wisata">Wisata</string>
    <string name="layanan">Layanan</string>
    <string name="gallery">Gallery</string>
    <string name="profile">Akun Anda</string>
    <string name="logout">Log Out</string>
    <string name="nama">Nama Lengkap</string>
    <string name="email">E-Mail</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="about_profile">About</string>

    <!-- Form Services -->
    <string name="nama_wisata">Nama Wisata</string>
    <string name="district">Provinsi</string>
    <string name="photo_choice">Pilih Foto</string>
    <string name="description">Deskripsi dan Alamat</string>
    <string name="send">Kirim</string>
    <string name="add_wisata">Tambahkan Lokasi Wisata Anda</string>

    <!-- Form Maps -->
    <string name="maps">Ini Layout Maps</string>
    <string name="full_maps">Peta Seluruh Wisata</string>

<<<<<<< HEAD
    <!-- Form Tour/ Wisata-->
    <string name="wisata_this">Ini Layout Wisata</string>
    <string name="no_tour">Tidak ada tempat wisata yang tersedia</string>
    <string name="title_tour">Nama Wisata</string>
    <string name="content_tour">Tentang Wisata</string>
    <string name="img_detail">Foto Lokasi Wisata</string>
=======
    <!-- Form Wisata-->
    <string name="wisata_this">Ini Layout Wisata</string>
>>>>>>> a052071bc2c498caf1f9c2af4687ee194ea7004e

    <!-- Form Gallery-->
    <string name="gallery_this">Ini Layout Gallery</string>
    <string name="title_activity_maps">Map</string>

</resources>
