<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activity.ServiceActivity"
    tools:showIn="@layout/activity_service">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/id_user_content_service"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"/>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/namaWisata_text_content_service"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nama_wisata"
                android:maxLines="1"
                android:padding="8dp"
                android:singleLine="true"
                android:textColorHint="@color/grey_0"/>
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="20dp"
            android:text="@string/district"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/grey_700"/>

        <Spinner
            android:id="@+id/spinner_district_content_service"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/grey_200"
            android:padding="12dp"
            android:scrollbars="vertical"/>

        <ImageView
            android:id="@+id/imgPreview_content_service"
            android:layout_width="fill_parent"
            android:layout_height="200dp"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="20dp"
            android:scaleType="centerCrop"
            android:src="@drawable/placeholder"/>

        <Button
            android:id="@+id/btn_choicePhoto_content_service"
            style="?android:textAppearanceSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/login_btn"
            android:text="@string/photo_choice"
            android:textColor="@color/grey_0"
            android:textStyle="bold"/>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/edit_description_content_service"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="top"
                android:hint="@string/description"
                android:inputType="textMultiLine"
                android:lines="4"
                android:maxLines="6"
                android:padding="8dp"
                android:scrollbars="vertical"
                android:textColorHint="@color/grey_0"/>
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btn_send_content_service"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@drawable/login_btn"
            android:text="@string/send"
            android:textColor="@color/grey_0"/>

    </LinearLayout>
</RelativeLayout>
