<?xml version="1.0" encoding="utf-8"?>
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        tools:context="com.oimtrust.osata.activity.RegisterActivity">

        <ScrollView
            android:id="@+id/login_form"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin">

                <!--<ImageView-->
                    <!--android:layout_width="160dp"-->
                    <!--android:layout_height="160dp"-->
                    <!--android:id="@+id/img_logo_register"-->
                    <!--android:layout_gravity="center_horizontal"-->
                    <!--android:clickable="true"-->
                    <!--android:src="@drawable/icon_launcer"/>-->

                <TextView
                android:id="@+id/txt_logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:clickable="true"
                android:text="@string/app_name"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/colorPrimary"
                android:textSize="45dp"
                android:textStyle="bold"/>

                <LinearLayout
                    android:id="@+id/form_register"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/loginactivity_logo_from_login"
                    android:orientation="vertical"
                    android:weightSum="1">

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/et_nameRegister"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/nama_text"
                            android:inputType="textPersonName"
                            android:maxLines="1"
                            android:padding="8dp"
                            android:singleLine="true"
                            android:textColorHint="@color/grey_0"/>
                        <!--android:textColorHint="@color/abc_primary_text_material_dark" />-->
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/et_emailRegister"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/email_text"
                            android:inputType="textEmailAddress"
                            android:maxLines="1"
                            android:padding="8dp"
                            android:singleLine="true"
                            android:textColorHint="@color/grey_0"/>
                        <!--android:textColorHint="@color/abc_primary_text_material_dark" />-->
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/et_passwordRegister"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="15dp"
                            android:hint="@string/pass_text"
                            android:imeActionId="@+id/login"
                            android:imeOptions="actionUnspecified"
                            android:inputType="textPassword"
                            android:maxLines="1"
                            android:padding="8dp"
                            android:singleLine="true"
                            android:textColorHint="@color/grey_0"/>
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/et_phoneRegister"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="15dp"
                            android:hint="@string/phone"
                            android:imeActionId="@+id/login"
                            android:imeOptions="actionUnspecified"
                            android:inputType="phone"
                            android:maxLines="1"
                            android:padding="8dp"
                            android:singleLine="true"
                            android:textColorHint="@color/grey_0"/>
                    </android.support.design.widget.TextInputLayout>


                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/et_cityRegister"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="15dp"
                            android:hint="@string/city"
                            android:imeActionId="@+id/login"
                            android:imeOptions="actionUnspecified"
                            android:inputType="textCapWords"
                            android:maxLines="1"
                            android:padding="8dp"
                            android:singleLine="true"
                            android:textColorHint="@color/grey_0"/>
                    </android.support.design.widget.TextInputLayout>

                    <TextView
                        android:id="@+id/tv_dobRegister"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:layout_marginTop="15dp"
                        android:padding="8dp"
                        android:text="@string/dob"
                        android:textColor="@color/grey_600"
                        android:textSize="18sp"/>

                    <!--<android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/edit_dob"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="15dp"
                            android:hint="@string/dob"
                            android:imeActionId="@+id/login"
                            android:imeOptions="actionUnspecified"
                            android:inputType="date"
                            android:maxLines="1"
                            android:padding="8dp"
                            android:singleLine="true"
                            android:textColorHint="@color/grey_0"/>
                    </android.support.design.widget.TextInputLayout>-->

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:padding="8dp"
                        android:text="@string/gender"
                        android:textColor="@color/grey_600"
                        android:textSize="18sp"/>

                    <Spinner
                        android:id="@+id/et_genderRegister"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/grey_200"
                        android:padding="12dp"
                        android:scrollbars="vertical"/>

                    <Button
                        android:id="@+id/btn_registerRegister"
                        style="?android:textAppearanceSmall"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="30dp"
                        android:background="@drawable/button"
                        android:text="@string/register_text"
                        android:textColor="@color/grey_0"/>

                    <LinearLayout
                        xmlns:android="http://schemas.android.com/apk/res/android"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="16dp"
                        android:layout_marginTop="16dp"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="1dp"
                            android:layout_gravity="center"
                            android:layout_weight="1"
                            android:background="@color/grey_1000"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="20dp"
                            android:layout_marginRight="20dp"
                            android:text="@string/different_login"
                            android:textColor="@color/grey_1000"
                            android:textSize="16sp"/>

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="1dp"
                            android:layout_gravity="center"
                            android:layout_weight="1"
                            android:background="@color/grey_1000"/>

                    </LinearLayout>

                    <TextView
                        android:id="@+id/tv_already_have"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginBottom="20dp"
                        android:layout_weight="1"
                        android:clickable="true"
                        android:gravity="center"
                        android:padding="10dp"
                        android:text="@string/already_registered"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:textColor="@color/grey_1000"/>

                </LinearLayout>
            </LinearLayout>
        </ScrollView>

    </LinearLayout>


