<?xml version="1.0" encoding="utf-8"?>


    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context="com.oimtrust.osata.activity.LoginActivity">

        <ScrollView
            android:id="@+id/login_form"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/ll_main"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:orientation="vertical"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin">

                <!--<ImageView-->
                    <!--android:layout_width="160dp"-->
                    <!--android:layout_height="160dp"-->
                    <!--android:id="@+id/img_logo_login"-->
                    <!--android:layout_gravity="center_horizontal"-->
                    <!--android:clickable="true"-->
                    <!--android:src="@drawable/profile"/>-->
                <TextView
                android:id="@+id/txt_logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:clickable="true"
                android:text="@string/app_name"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/colorPrimary"
                android:textSize="45sp"
                android:textStyle="bold"/>

                <LinearLayout
                    android:id="@+id/email_login_form"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/loginactivity_logo_from_login"
                    android:orientation="vertical"
                    android:weightSum="1">

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <AutoCompleteTextView
                            android:id="@+id/et_emailLogin"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/email_text"
                            android:inputType="textEmailAddress"
                            android:maxLines="1"
                            android:padding="8dp"
                            android:singleLine="true"
                            android:textColorHint="@color/grey_0"/>
                        <!--android:textColorHint="@color/abc_primary_text_material_dark" />-->
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/et_passwordLogin"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="15dp"
                            android:hint="@string/pass_text"
                            android:imeActionId="@+id/login"
                            android:imeOptions="actionUnspecified"
                            android:inputType="textPassword"
                            android:maxLines="1"
                            android:padding="8dp"
                            android:singleLine="true"
                            android:textColorHint="@color/grey_0"/>
                    </android.support.design.widget.TextInputLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/tv_forgot"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="2dp"
                            android:layout_weight="1"
                            android:clickable="true"
                            android:gravity="center"
                            android:paddingBottom="15dp"
                            android:paddingLeft="2dp"
                            android:paddingTop="15dp"
                            android:text="@string/pass_forgot"
                            android:textAppearance="?android:attr/textAppearanceSmall"
                            android:textColor="@color/grey_1000"/>

                        <TextView
                            android:id="@+id/tv_register"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="2dp"
                            android:layout_weight="1"
                            android:clickable="true"
                            android:gravity="center"
                            android:paddingBottom="15dp"
                            android:paddingTop="15dp"
                            android:text="@string/register_text"
                            android:textAppearance="?android:attr/textAppearanceSmall"
                            android:textColor="@color/grey_1000"
                            tools:ignore="RtlHardcoded" />
                    </LinearLayout>

                    <Button
                        android:id="@+id/btn_login"
                        style="?android:textAppearanceSmall"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2dp"
                        android:background="@drawable/button"
                        android:text="@string/login_text"
                        android:textColor="@color/grey_0"/>

                    <LinearLayout
                        xmlns:android="http://schemas.android.com/apk/res/android"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="16dp"
                        android:layout_marginTop="16dp"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="1dp"
                            android:layout_gravity="center"
                            android:layout_weight="1"
                            android:background="@color/grey_1000"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="20dp"
                            android:layout_marginRight="20dp"
                            android:text="@string/different_login"
                            android:textColor="@color/grey_1000"
                            android:textSize="16sp"/>

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="1dp"
                            android:layout_gravity="center"
                            android:layout_weight="1"
                            android:background="@color/grey_1000"/>

                    </LinearLayout>

                    <com.google.android.gms.common.SignInButton
                        android:id="@+id/btn_googleLogin"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                </LinearLayout>
            </LinearLayout>

        </ScrollView>

    </LinearLayout>


